# AIDZero

./: .gitignore  AGENTS.md  AIDZero.py  HeadlessPrompt.txt  README.md  main.py  pyproject.toml  run-tool-gateway.sh
AIDZeroCode/: LICENSE  pyproject.toml
AIDZeroCode/CORE/: __init__.py  agents.py  all_launcher.py  api_client.py  api_contract.py  api_server.py  dash_commands.py  engine.py  gateway.py  llm_client.py  memory.py  repo_layout.py  storage.py  tooling.py  ui_launcher.py  ui_registry.py  ui_runtime.py
Agents/: default.json  planificador.json  system_prompt.md  system_prompt_planner.md
DASH/: __init__.py  agente.py  load.py  setup.py  trigger.py
LLMProviders/: AGENTS.md  base.py  openai_compatible_provider.py  provider_base.py
MCP/: AGENTS.md  mcporter.json  run-tool-gateway.sh
TOOLS/: _helpers.py  _mcp_gateway.py  computer_control.py  history_get.py  list_files.py  mcp_call_tool.py  mcp_describe_tool.py  mcp_health.py  mcp_seach_tool.py  mcp_search_tools.py  memory_get.py  memory_list.py  memory_set.py  read_skill.py  read_text.py  sandbox_run.py
UI/: AGENTS.md  terminal.py
agent/: __init__.py  catalog.py  engine.py  entrypoint_writer.py  gateway.py  generated_agent_config.py  generated_agent_runtime.py  llm_client.py  memory.py  models.py  openai_compatible_provider.py  planner.py  prompt_history.py  provider_base.py  provider_registry.py  runtime_config.py  scaffold.py  service.py  system_prompt.md  terminal_app.py  tooling.py  ui_display.py  ui_registry.py  ui_runtime.py  workspace_guard.py
agent_creator/: entrypoint_writer.py  models.py  planner.py  provider_registry.py  runtime_config.py  scaffold.py  service.py
core/: __init__.py  agents.py  all_launcher.py  api_client.py  api_contract.py  api_server.py  dash_commands.py  engine.py  gateway.py  llm_client.py  prompt_history.py  runtime_config.py  system_prompt_planner.md  tooling.py  ui_launcher.py  ui_registry.py  ui_runtime.py
tests/: test_agent_service_planning.py  test_agent_service_scaffold.py  test_agents.py  test_aidzero_provider_models.py  test_api_client.py  test_api_contract.py  test_dash_agente.py  test_dash_commands.py  test_dash_load.py  test_dash_setup.py  test_engine.py  test_entrypoint_writer.py  test_gateway.py  test_generated_agent_runtime.py  test_generation_process_log.py  test_llm_client_streaming.py  test_mcp_tools.py  test_planner.py  test_prompt_history.py  test_provider_base_system_prompt.py  test_provider_base_tool_streaming.py  test_provider_registry.py  test_scaffold.py  test_terminal_app.py  test_tool_loader.py  test_tooling_computer_control.py  test_ui_display.py  test_ui_launcher.py  test_ui_registry.py  test_web_ui.py
(+133 files in other folders)
