[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidzero"
version = "0.1.0"
description = "Runtime modular de agentes LLM para AIDZero."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "AIDZero" }]
dependencies = [
    "textual>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
aidzero = "AIDZero:main"

[tool.setuptools]
py-modules = ["AIDZero", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "DASH*", "TOOLS*", "LLMProviders*", "UI*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["generated_agents"]
