[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidzero"
version = "0.2.1"
description = "Runtime modular de agentes LLM para AIDZero."
readme = "AIDZeroCode/README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "AIDZero" }]
dependencies = [
    "mcp>=1.26.0",
    "jsonschema>=4.26.0",
    "textual>=0.75.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
aidzero = "AIDZero:main"
aidzero-core = "CORE.api_server:main"
aidzero-ui = "CORE.ui_launcher:main"
aidzero-all = "CORE.all_launcher:main"

[tool.setuptools]
py-modules = ["AIDZero"]

[tool.setuptools.packages.find]
where = ["AIDZeroCode"]
include = ["CORE*", "DASH*", "TOOLS*", "LLMProviders*", "UI*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["AIDZeroCode/tests"]
norecursedirs = ["generated_agents"]
